# gholi

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py
.github/workflows/: build.yml  build_arm64_qemu.yml  test.yml
cpp/: CMakeLists.txt
cpp/include/: CMakeLists.txt
cpp/include/Gholi/: CMakeLists.txt  IndexingDialect.h  IndexingDialect.td  IndexingOps.h  IndexingOps.td  IndexingPasses.h  IndexingPasses.td  IndexingTypes.h  IndexingTypes.td
cpp/lib/Gholi/: CMakeLists.txt  IndexingDialect.cpp  IndexingOps.cpp  IndexingPasses.cpp  IndexingTypes.cpp
cpp/python_ext/: CMakeLists.txt  GholiExtension.cpp  IRTypes.cpp  IRTypes.h
examples/: fancy_indexing.py  index_to_gather.py
gholi/mlir/: .gitignore  __init__.py  passes.py
gholi/mlir/dialects/: IndexingOps.td  _ods_common.py  indexing.py
scripts/: parse_mlir_opt_passes.py
tests/: test_basic.py
